# dotium

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
fixtures/home/.config/someapp/: config
fixtures/home/.config/someotherapp/: secret_config
src/: config.rs  main.rs  secret_key.rs
src/cli/: apply.rs  common.rs  completions.rs  edit.rs  gen_key.rs  init.rs  init_repo.rs  mod.rs  recipients.rs  track.rs  update.rs  variables.rs
src/model/: context.rs  key.rs  mod.rs  repo.rs  secret_key.rs
src/repository/: environment.rs  file_ref.rs  mod.rs  outcome.rs  path_translate.rs  tests.rs
src/repository/actions/: as_is.rs  crypted.rs  j2_template.rs  mod.rs
src/utils/: color_diff.rs  mod.rs
