[package]
name = "dotium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
age = { version = "0", features = ["armor", "ssh"] }
chrono = "0"
console = "0"
dialoguer = { version = "0", features = ["fuzzy-select"] }
clap = { version = "3", features = ["cargo", "derive"] }
clap_complete = "3"
dissimilar = "1"
dirs = "4"
gethostname = "0"
itertools = "0"
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tera = "1"
