[package]
name = "dotium"
version = "0.1.10"
edition = "2021"
authors = ["Untoldwind <landru@untoldwind.net>"]
license = "MIT"
readme = "./README.md"
repository = "https://github.com/untoldwind/dotium"
description = "Dot-file management for multiple machines or small teams"
keywords = ["dotfile", "dotfiles", "dotfiles-manager"]

[dependencies]
age = { version = "0", features = ["armor", "ssh"] }
chrono = "0"
console = "0"
dialoguer = { version = "0", features = ["fuzzy-select"] }
clap = { version = "4", features = ["cargo", "derive"] }
clap_complete = "4"
diff = "0"
dirs = "4"
gethostname = "0"
itertools = "0"
lazy_static = "1"
prettytable-rs = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tera = "1"

[dev-dependencies]
tempfile = "3"
